# mqtt-client

./: CMakeLists.txt  hfHttpClient.cpp  hfHttpClient.h  hfMqttClient.cpp  hfMqttClient.h  hfMqttManager.cpp  hfMqttManager.h  hfMqttTest.cpp  hfMqttTest1.cpp  hfTypes.h
libs/curl-7.55.1/armlib/: libcurl.la  libcurl.so.4.4.0
libs/curl-7.55.1/armlib/pkgconfig/: libcurl.pc
libs/curl-7.55.1/lib/: libcurl.la  libcurl.so.4  libcurl.so.4.4.0
libs/curl-7.55.1/lib/pkgconfig/: libcurl.pc
libs/openssl/armlib/: libcrypto.so.1.1  libssl.so.1.1
libs/openssl/armlib/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
libs/openssl/share/man/man1/: CA.pl.1  asn1parse.1  ca.1  ciphers.1  cms.1  crl.1  crl2pkcs7.1  dgst.1  dhparam.1  dsa.1  dsaparam.1  ec.1  ecparam.1  enc.1  engine.1  errstr.1  gendsa.1  genpkey.1  genrsa.1  list.1  nseq.1  ocsp.1  openssl.1  passwd.1  pkcs12.1  pkcs7.1  pkcs8.1  pkey.1  pkeyparam.1  pkeyutl.1  prime.1  rand.1  rehash.1  req.1  rsa.1  rsautl.1  s_client.1  s_server.1  s_time.1  sess_id.1  (+10 more)
libs/openssl/share/man/man3/: ADMISSIONS.3  ASN1_INTEGER_get_int64.3  ASN1_ITEM_lookup.3  ASN1_OBJECT_new.3  ASN1_STRING_TABLE_add.3  ASN1_STRING_length.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_TYPE_get.3  ASN1_generate_nconf.3  ASYNC_WAIT_CTX_new.3  ASYNC_start_job.3  BF_encrypt.3  BIO_ADDR.3  BIO_ADDRINFO.3  BIO_connect.3  BIO_ctrl.3  BIO_f_base64.3  BIO_f_buffer.3  BIO_f_cipher.3  BIO_f_md.3  BIO_f_null.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_data.3  BIO_get_ex_new_index.3  BIO_meth_new.3  BIO_new.3  BIO_new_CMS.3  BIO_parse_hostserv.3  BIO_printf.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_bio.3  BIO_s_connect.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  (+427 more)
libs/openssl/share/man/man5/: config.5  x509v3_config.5
libs/openssl/share/man/man7/: Ed25519.7  RAND.7  RAND_DRBG.7  RSA-PSS.7  SM2.7  (+13 more)
libs/paho.mqtt.c/armlib/: libpaho-mqtt3a.so.1  libpaho-mqtt3c.so.1
libs/paho.mqtt.c/lib/: libpaho-mqtt3a.so.1  libpaho-mqtt3as.so.1  libpaho-mqtt3c.so.1.3  paho_c_version
(+1 files in other folders)
